// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a panel 1`] = `
<div
  className="panel  card"
  footer={null}
  footerStyle={Object {}}
  fullscreen={false}
  header={null}
  hideTooltip={null}
  minimizable={false}
  style={
    Object {
      "height": undefined,
    }
  }
  t={[Function]}
>
  <div
    className="card-body"
    style={
      Object {
        "display": null,
      }
    }
  >
    <p>
      Lorem ipsum...
    </p>
  </div>
</div>
`;

exports[`renders a panel with a heading 1`] = `
<div
  className="panel  card"
  footer={null}
  footerStyle={Object {}}
  fullscreen={false}
  header="Title"
  hideTooltip={null}
  minimizable={false}
  style={
    Object {
      "height": undefined,
    }
  }
  t={[Function]}
>
  <h3
    className="card-header"
  >
    <span
      className="unselectable"
    >
      Title
    </span>
  </h3>
  <div
    className="card-body"
    style={
      Object {
        "display": null,
      }
    }
  >
    <p>
      Lorem ipsum...
    </p>
  </div>
</div>
`;
